--- a/echo-control/docs/index.mdx
+++ b/echo-control/docs/index.mdx
@@ -4,12 +4,11 @@ title: Introduction
 
 # What is Echo?
 
-Echo is a service and set of client libraries that provides authentication and 
-usage-based billing for expensive AI resources. Install in your app and ship your 
-monetized AI application without the risk massive OpenAI bills.
+Echo is the billing infrastructure for AI applications. Replace your OpenAI import with Echo's drop-in SDK and instantly get user authentication, usage-based billing, and revenue sharing. Your users get one universal balance that works across all Echo-powered apps, eliminating payment friction and creating network effects that grow your user base.
 
-Select your app's architecture to get started or view the example application 
-or repository with the buttons below.
+Like Clerk handles authentication complexity, Echo handles AI billing complexity. No Stripe integration, no payment processing, no surprise bills. Set your markup percentage, and Echo handles everything else - from user authentication to transaction recording to revenue distribution. Your OpenAI code works unchanged, but now it generates revenue.
+
+Echo supports both traditional server-side patterns and modern client-side architectures. The React SDK enables secure LLM calls directly from browsers using OAuth2 + PKCE, eliminating API key exposure while maintaining per-user billing. Choose your integration pattern below to get started.
 
 <ExampleCards 
   cards={[
