--- a/echo-control/docs/react-sdk/index.mdx
+++ b/echo-control/docs/react-sdk/index.mdx
@@ -1,12 +1,110 @@
 ---
-title: React SDK
-description: The React SDK for Echo
+title: Overview
+description: React SDK for direct LLM integration with OAuth2 + PKCE authentication
 ---
 
 # React SDK
 
-The React SDK for Echo is a library that provides a set of components and hooks for building applications with Echo.
+## The Killer Feature
 
-## Components
+The Echo React SDK enables React applications to call LLMs directly from the browser without API keys or backend servers. Using OAuth2 + PKCE authentication, your users get short-lived JWT tokens that can invoke LLMs securely from the client-side.
 
-### EchoProvider
+```tsx
+import { EchoProvider, useEchoOpenAI } from '@merit-systems/echo-react-sdk';
+
+function ChatComponent() {
+  const { openai, isReady } = useEchoOpenAI();
+  
+  if (!isReady) return <div>Loading...</div>;
+  
+  // Direct LLM calls from the browser - no API keys needed!
+  const response = await openai.chat.completions.create({
+    model: "gpt-5",
+    messages: [{ role: "user", content: "Hello!" }]
+  });
+  
+  return <div>{response.choices[0].message.content}</div>;
+}
+```
+
+## Architecture
+
+The React SDK implements a secure OAuth2 + PKCE flow that eliminates API key management:
+
+1. **User Authentication**: OAuth2 + PKCE flow with your Echo app
+2. **JWT Token Exchange**: Receive short-lived JWTs with LLM access scope  
+3. **Direct LLM Calls**: Use tokens directly with OpenAI-compatible endpoints
+4. **Automatic Refresh**: Seamless token renewal in the background
+
+This architecture provides:
+- **No API key exposure** - Tokens are scoped to individual users
+- **Enhanced security** - Short-lived tokens with automatic refresh
+- **User-scoped billing** - Each user's usage is tracked separately
+- **Direct client calls** - No backend proxy required
+
+## Installation
+
+<Tabs items={['npm', 'pnpm', 'yarn', 'bun']}>
+  <Tab value="npm">
+    ```bash
+    npm install @merit-systems/echo-react-sdk openai
+    ```
+  </Tab>
+  <Tab value="pnpm">
+    ```bash
+    pnpm add @merit-systems/echo-react-sdk openai
+    ```
+  </Tab>
+  <Tab value="yarn">
+    ```bash
+    yarn add @merit-systems/echo-react-sdk openai
+    ```
+  </Tab>
+  <Tab value="bun">
+    ```bash
+    bun add @merit-systems/echo-react-sdk openai
+    ```
+  </Tab>
+</Tabs>
+
+## Quick Start
+
+Wrap your app with `EchoProvider` and start making direct LLM calls:
+
+```tsx
+import { EchoProvider, EchoSignIn, useEcho, useEchoOpenAI } from '@merit-systems/echo-react-sdk';
+
+function App() {
+  return (
+    <EchoProvider config={{ 
+      appId: 'your-echo-app-id',
+      apiUrl: 'https://echo.merit.systems' 
+    }}>
+      <ChatApp />
+    </EchoProvider>
+  );
+}
+
+function ChatApp() {
+  const { isAuthenticated } = useEcho();
+  const { openai, isReady } = useEchoOpenAI();
+  
+  if (!isAuthenticated) {
+    return <EchoSignIn />;
+  }
+  
+  if (!isReady) {
+    return <div>Initializing LLM client...</div>;
+  }
+  
+  return <ChatInterface openai={openai} />;
+}
+```
+
+## Documentation Sections
+
+- **[Authentication](/docs/react-sdk/authentication)** - User authentication, EchoProvider setup, and auth state management
+- **[LLM Integration](/docs/react-sdk/llm-integration)** - Direct LLM calls with useEchoOpenAI hook
+- **[Components](/docs/react-sdk/components)** - Pre-built UI components for authentication and payments
+- **[Hooks](/docs/react-sdk/hooks)** - Additional hooks for Echo platform integration
+- **[Advanced](/docs/react-sdk/advanced)** - Error handling, token management, and customization patterns
