--- a/echo-control/docs/advanced/index.mdx
+++ b/echo-control/docs/advanced/index.mdx
@@ -3,6 +3,6 @@ title: Advanced
 description: Advanced topics
 ---
 
-# Advanced
+- **[How Echo Works](/docs/advanced/how-echo-works)** - Technical architecture guide for Echo's proxy layer, authentication, and billing system.
 
-This section covers advanced topics.
+- **[API Reference](/docs/advanced/api-reference)** - Complete V1 API reference for programmatic access to Echo endpoints.
