--- a/echo-control/docs/getting-started/cli.mdx
+++ b/echo-control/docs/getting-started/cli.mdx
@@ -106,3 +106,7 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
         ### Prosper.
     </Step>
 </Steps>
+
+## Next Steps
+
+For detailed documentation and advanced features, see the [TypeScript SDK overview](/docs/typescript-sdk).
