--- a/echo-control/docs/getting-started/next-js.mdx
+++ b/echo-control/docs/getting-started/next-js.mdx
@@ -175,3 +175,7 @@ import { File, Folder, Files } from 'fumadocs-ui/components/files';
     </Step>
 
 </Steps>
+
+## Next Steps
+
+For detailed documentation and advanced features, see the [Next.js SDK overview](/docs/next-sdk).
