--- a/echo-control/docs/getting-started/react.mdx
+++ b/echo-control/docs/getting-started/react.mdx
@@ -373,5 +373,8 @@ import { Step, Steps } from 'fumadocs-ui/components/steps';
         Visit your app's homepage at [`http://localhost:5173`](http://localhost:5173). Sign in and click "Generate Wisdom".
     </Step>
 
-
 </Steps>
+
+## Next Steps
+
+For detailed documentation and advanced features, see the [React SDK overview](/docs/react-sdk).
