--- a/echo-control/docs/react-sdk/authentication.mdx
+++ b/echo-control/docs/react-sdk/authentication.mdx
@@ -26,17 +26,17 @@ function App() {
 }
 ```
 
-### EchoConfig
+### EchoAuthConfig
 
 ```typescript
-import type { EchoConfig } from '@merit-systems/echo-react-sdk';
+import type { EchoAuthConfig } from '@merit-systems/echo-react-sdk';
 ```
 
-#### EchoConfig
+#### EchoAuthConfig
 
 <AutoTypeTable 
   path="../echo-react-sdk/src/types/index.ts" 
-  name="EchoConfig" 
+  name="EchoAuthConfig" 
 />
 
 ### EchoContextValue
